🔵 Challenge complete - Social links profile

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,5 @@
 # Avoid folder created for ai pair programmer
 #############################################
 /gemini
+/temp
 #############################################
